--- a/about.html
+++ b/about.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Happy life</title>
@@ -30,10 +28,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="homepage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="resources.html">Resources</a></li>
                 <li><a href="contact.html">Contacts</a></li>
-                <li><a href="mood.html">Mood Journal</a></li>
+                <li><a href="mood.html">Mood</a></li>
             </ul>
         </nav>
     </header>
@@ -86,55 +84,67 @@
 
     <div class="back-to-top">⬆ Back to Top</div>
 
-   <script>
-  $(document).ready(function () {
+    <script>
+        $(document).ready(function() {
     // Smooth fade-in effect for sections
     $(".about-box, .team-box").addClass("fade-in").css("opacity", "1");
 
     // Accordion effect
-    $(".about-box h2").click(function () {
-      $(this).next("p").slideToggle();
+    $(".about-box h2").click(function() {
+        $(this).next("p").slideToggle();
     });
 
     // Typing effect for header
     let text = "🌟 About Us";
     let index = 0;
     function typeText() {
-      if (index < text.length) {
-        $("#typing-header").text(text.substring(0, index + 1));
-        index++;
-        setTimeout(typeText, 100);
-      }
+        if (index < text.length) {
+            $("#typing-header").text(text.substring(0, index + 1));
+            index++;
+            setTimeout(typeText, 100);
+        }
     }
     typeText();
 
     // Show back-to-top button when scrolling
-    $(window).scroll(function () {
-      if ($(this).scrollTop() > 100) {
-        $(".back-to-top").fadeIn();
-      } else {
-        $(".back-to-top").fadeOut();
-      }
+    $(window).scroll(function() {
+        if ($(this).scrollTop() > 100) {
+            $(".back-to-top").fadeIn();
+        } else {
+            $(".back-to-top").fadeOut();
+        }
     });
 
     // Smooth scroll to top
-    $(".back-to-top").click(function () {
-      $("html, body").animate({ scrollTop: 0 }, "slow");
+    $(".back-to-top").click(function() {
+        $("html, body").animate({ scrollTop: 0 }, "slow");
     });
 
-    // Animate headers on hover
+    // Make titles interactive by animating them on hover
     $(".about-box h2, .team-box h2").hover(
-      function () {
-        $(this).animate({ marginLeft: "10px", fontSize: "1.9em" }, 200);
-        $(this).css("cursor", "pointer");
-      },
-      function () {
-        $(this).animate({ marginLeft: "0px", fontSize: "1.8em" }, 200);
-      }
+        function() {
+            $(this).animate(
+                {
+                    marginLeft: "10px",  // Slide right effect
+                    fontSize: "1.9em"    // Slightly increase font size
+                },
+                200  // Duration of the animation
+            );
+            $(this).css("cursor", "pointer"); // Change the cursor to indicate it's clickable
+        },
+        function() {
+            $(this).animate(
+                {
+                    marginLeft: "0px",  // Return to original position
+                    fontSize: "1.8em"   // Original font size
+                },
+                200
+            );
+        }
     );
-  });
+});
 
-  </script>
+    </script>
 
 </body>
 </html>
