--- a/resources.html
+++ b/resources.html
@@ -4,11 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resources - Happy life</title>
+    <title>Contact Us - Happy life</title>
     <link rel="stylesheet" href="style.css">
  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js" defer></script>
-   
+
+   <style>
+  /* Style for resource links only */
+  .resource-link {
+    color: #ff6b6b; /* Matches your theme */
+    font-weight: bold;
+    text-decoration: none;
+    border-bottom: 2px dotted #ffb347;
+    transition: all 0.3s ease-in-out;
+    position: relative;
+  }
+
+  .resource-link::after {
+    content: " 🔗";
+    font-size: 0.9em;
+    position: relative;
+    left: 2px;
+    top: -1px;
+    transition: transform 0.3s ease;
+  }
+
+  .resource-link:hover {
+    color: #ff4081;
+    text-shadow: 0 0 5px rgba(255, 105, 180, 0.6);
+    transform: scale(1.05);
+    border-bottom: 2px solid #ffa500;
+  }
+
+  .resource-link:hover::after {
+    transform: rotate(20deg) scale(1.2);
+  }
+</style>
+
    </head>
 <body>
 
@@ -16,7 +48,7 @@
         <nav>
             <ul>
                 <li><a href="homepage.html">Home</a></li>
-            <li><a href="mood.html">Mood Journal</a></li>
+            <li><a href="mood.html">Mood</a></li>
             <li><a href="contact.html">Contacts</a></li>
               <li><a href="about.html">About</a></li>
             </ul>
@@ -49,10 +81,10 @@
             <button class="read-more" onclick="showResource('therapy')">Learn More</button>
             <div id="therapy" class="resource-detail">
                 <ul>
-                    <li><a href="https://www.betterhelp.com" class="resource-link" target="_blank">BetterHelp</a> - Online counseling with licensed therapists.</li>
-                    <li><a href="https://www.talkspace.com" class="resource-link" target="_blank">TalkSpace</a> - Connect with a therapist via text, audio, or video.</li>
-                    <li><a href="https://www.7cups.com" class="resource-link" target="_blank">7 Cups</a> - Free emotional support from trained listeners.</li>
-                    <li><a href="https://www.reachout.com" class="resource-link" target="_blank">ReachOut</a> - Mental health support for young people.</li>
+                    <li><a href="https://www.betterhelp.com" class="resource-link" target="_blank">BetterHelp</a> – Online counseling with licensed therapists.</li>
+<li><a href="https://www.talkspace.com" class="resource-link" target="_blank">TalkSpace</a> – Connect with a therapist via text, audio, or video.</li>
+<li><a href="https://www.7cups.com" class="resource-link" target="_blank">7 Cups</a> – Free emotional support from trained listeners.</li>
+<li><a href="https://www.reachout.com" class="resource-link" target="_blank">ReachOut</a> – Mental health support for young people.</li>
                 </ul>
             </div>
         </div>
@@ -73,21 +105,23 @@
 </section>
 <footer>
 <script>
-function showResource(id) {
-  // Hide all resource details first
-  const allDetails = document.querySelectorAll('.resource-detail');
-  allDetails.forEach(detail => {
-    detail.style.display = 'none';
-  });
+$(document).ready(function () {
+    // Initially hide all resource details
+    $(".resource-detail").hide();
 
-  // Toggle the selected resource
-  const selected = document.getElementById(id);
-  if (selected.style.display === 'block') {
-    selected.style.display = 'none';
-  } else {
-    selected.style.display = 'block';
-  }
-}
+    // Click event for Read More / Learn More buttons
+    $(".read-more").click(function () {
+        let targetId = $(this).next(".resource-detail"); // Get the associated resource detail
+
+        // Check if the clicked button is in the second box
+        if ($(this).parent().index() === 1) {
+            $("#selfcare").slideDown(600); // Slide in the first box's message
+        }
+
+        // Toggle the clicked resource detail
+        targetId.slideToggle(600);
+    });
+});
 </script>
         <p>&copy; 2025 Happy Life Project</p>
     </footer>
