--- a/index.html
+++ b/index.html
@@ -1,101 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Happy Life Login 🌸</title>
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(135deg, #ffcccb, #fff176);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      font-family: 'Quicksand', sans-serif;
-    }
-    .login-container {
-      background: white;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(255, 107, 107, 0.3);
-      padding: 40px 30px;
-      max-width: 400px;
-      width: 90%;
-      text-align: center;
-    }
-    h1 { color: #ff6b6b; margin-bottom: 10px; }
-    input {
-      width: 80%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-    }
-    button {
-      width: 60%;
-      padding: 12px;
-      margin: 15px 0;
-      border-radius: 12px;
-      border: none;
-      background: linear-gradient(to right, #ff6b6b, #ffeb3b);
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      transition: transform 0.2s, background 0.3s;
-    }
-    button:hover { transform: scale(1.05); background: #ffb347; }
-    .message { margin-top: 10px; color: red; font-weight: bold; }
-    nav a { margin: 0 8px; color: #ff6b6b; text-decoration: none; font-weight: bold; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Happy Life</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="login-container">
-    <h1>🌸 Happy Life</h1>
-    <h2>Login</h2>
 
-    <input type="email" id="loginEmail" placeholder="Email" required />
-    <input type="password" id="loginPass" placeholder="Password" required />
-    <button id="loginBtn">Login</button>
-    <p class="message" id="loginMsg"></p>
+<header>
+    <h1>Happy Life</h1>
+    <p>Join our community and start your journey towards positivity.</p>
+</header>
 
-    <nav>
-      <a href="register.html">Register</a>
-      <a href="index.html">Back</a>
-    </nav>
-  </div>
+<center> 
+<nav>
+    <ul>
+        <li><a href="resources.html">Resources</a></li>
+        <li><a href="mood.html">Mood</a></li>
+        <li><a href="contact.html">Contacts</a></li>
+        <li><a href="about.html">About</a></li>
+    </ul>
+</nav>
+</center>
 
-  <script>
-    document.getElementById('loginBtn').addEventListener('click', async () => {
-      const email = document.getElementById('loginEmail').value.trim();
-      const password = document.getElementById('loginPass').value.trim();
-      const msg = document.getElementById('loginMsg');
+<main>
+    <section id="home">
+        <div class="hero-content">
+            <h2>Welcome to Happy Life</h2>
+            <p>Your mental health is our priority. Let’s work together for a brighter tomorrow.</p>
+            <button class="cta-button">Explore Resources</button>
+        </div>
+    </section>
 
-      if (!email || !password) {
-        msg.innerText = "Please fill all fields.";
-        return;
-      }
+   
+    <section id="emergency-alert">
+        <marquee scrollamount="19" scrolldelay="106">
+            <h2>Emergency Alert !!! Emergency Alert !!! Emergency Alert !!! Emergency Alert !!! Emergency Alert !!! Emergency Alert !!!</h2>
+        </marquee>
+        <p>If you feel unsafe or in crisis, press the button below to alert your emergency contacts.</p>
+        <button id="alert-button" class="alert-button">Send Emergency Alert</button>
+    </section>
+<footer>
+    <p>&copy; 2025 Happy Life Project</p>
+</footer>
 
-      const res = await fetch('login.php', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ email, password })
-      });
+</main>
 
-      const data = await res.json();
-      msg.innerText = data.message;
+<script>
+    $(document).ready(function () {
 
-      if (data.success) {
-        if (data.role === "admin") {
-          window.location.href = "admin_dashboard.php";
-        } else {
-          window.location.href = "homepage.html";
-        }
-      }
+        // Hide body first and fade it in
+        $("body").hide().fadeIn(1000);
+
+        // Blinking effect on emergency alert (only the h2 inside marquee)
+        setInterval(function () {
+            $("#emergency-alert h2").fadeOut(500).fadeIn(500);
+        }, 2000);
+
+        // Rotate text for the second header (h2)
+        let messages = [
+            "Welcome to Happy Life",
+            "Stay Positive, Stay Happy 😊",
+            "Your Journey to Happiness Starts Here"
+        ];
+        let index = 0;
+        setInterval(function () {
+            $("#home h2").fadeOut(500, function () {
+                $(this).text(messages[index]).fadeIn(500);
+            });
+            index = (index + 1) % messages.length;
+        }, 3000);
+
+        $(".cta-button").click(function () {
+            window.location.href = "resources.html"; // Redirects to resources.html
+        });
+
+        // Show emergency alert when the button is clicked and change the message
+        $("#alert-button").click(function () {
+            $("#emergency-alert").fadeIn(500, function () {
+                $("#emergency-alert p").text("You are safe now. The alert message is sent.");
+                $("#alert-button").hide(); // Hide button after clicking
+            });
+        });
+
+        // Fun hover effect on buttons
+        $("button").hover(function () {
+            $(this).css({
+                "background-color": "#ffcc00",
+                "transform": "scale(1.1)"
+            });
+        }, function () {
+            $(this).css({
+                "background-color": "",
+                "transform": "scale(1)"
+            });
+        });
+
     });
-  </script>
+</script>
+
 </body>
 </html>
-
